--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
